rework swagger inclusion

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ archive_path: /archive.html
 categories_path: /categories.html
 tags_path: /tags.html
 
+swagger_doc_location: http://petstore.swagger.io/v2/swagger.json
+
 defaults:
   -
     scope:
